--- a/Keeper.client/package.json
+++ b/Keeper.client/package.json
@@ -14,7 +14,7 @@
     "axios": "0.27.2",
     "bootstrap": "5.2.1",
     "socket.io-client": "4.5.2",
-    "sweetalert2": "11.4.34",
+    "sweetalert2": "^11.4.8",
     "vue": "3.2.39",
     "vue-router": "4.1.5"
   },
@@ -25,7 +25,7 @@
     "eslint": "8.24.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-vue": "9.5.1",
-    "sass": "1.54.5",
+    "sass": "^1.54.5",
     "vite": "3.1.3"
   }
 }
